Fix create button z-index

--- a/src/components/CreateTodoButton/createTodoButton.css
+++ b/src/components/CreateTodoButton/createTodoButton.css
@@ -18,7 +18,7 @@
 
   transform: rotate(0);
   transition: 0.3s ease;
-  z-index: 1;
+  z-index: 10;
 }
 
 .create-todo-button:hover {
